# reaper

./: App.cpp  App.h  AppOpenCL.cpp  AppOpenCL.h  CMakeConf.h.in  CMakeLists.txt  CPUAlgos.cpp  Config.cpp  Curl.cpp  Curl.h  Global.h  README.md  ServerSettings.h  Util.h  bitcoin.conf  cmake-linux.sh  cmake-win.cmd  json_value.cpp  litecoin-default.cl  litecoin.conf  main.cpp  reaper.conf  scrypt.cpp
howto/en/: install_howto_english.txt
